# fennecs

./: .clang-format  .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/fennecs/component/: traits.ipp
source/fennecs/entity/: allocator.cpp  archetype.ipp  layout.ipp  stream.hpp  world.ipp
source/fennecs/intrusive/: node.ipp
sources/fennecs/component/: registry.ipp
sources/fennecs/entity/: handle.cpp  handle.hpp  layout.cpp  stream.cpp  world.ipp
sources/fennecs/intrusive/: node.ipp
src/: CMakeLists.txt  main.cpp
src/fennecs/component/: registry.cpp  registry.hpp  registry.ipp  traits.hpp  traits.ipp
src/fennecs/core/: assert.hpp
src/fennecs/entity/: archetype.cpp  archetype.hpp  archetype.ipp  array.cpp  array.hpp  handle.cpp  handle.hpp  layout.cpp  layout.hpp  layout.ipp  registry.cpp  registry.hpp  stream.cpp  stream.hpp  world.cpp  world.hpp  world.ipp
src/fennecs/intrusive/: list.hpp  list.ipp  node.hpp  node.ipp
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
